k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service 
spec:
  selector:
     app: node-app       
  ports:
    - protocol: TCP      
      port: 80           
      targetPort: 8080    
  type: LoadBalancer
