k8s/manifests/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx  # Ensure nginx ingress controller is installed
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-app-service  # Name of the service you defined
                port:
                  number: 80  # Port of your service
